# aoc

./: .editorconfig  .gitignore  .mega-linter.yml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: mega-linter.yml
01_sonar_sweep/: sonar_sweep.py
2021/02_dive/: dive.py  example.csv
2021/03_power_consumption/: input.txt  power_consumption.py
2021/solutions/11_dumbo_octopus/: dumbo_octopus.py
2023/01/: trebuchet.py
2023/03_gear_ratios/: gears.py
solutions/02_dive/: dive.py  dive_pt_two.py  formatted_input.csv
solutions/03_power_consumption/: power_consumption.py
solutions/11_dumbo_octopus/: dumbo_octopus.py  prompt.txt
