[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
numpy = "^1.21.4"
pandas = "^1.3.4"
icecream = "^2.1.1"

[tool.poetry.dev-dependencies]
icecream = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
